--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 </label>
                 <ul class="menu">
                     <li>Mission</li>
+                    <li>About</li>
                     <li>Careers</li>
                     <li>Contact</li>
                 </ul>
@@ -164,7 +165,7 @@
 
             <section class="image-container">
                 <article>
-                    <img class="download2" alt="download app " src="images/app-download-buttons.png">
+                    <img class="download2" alt="download app on googleplay or the apple store" src="images/app-download-buttons.png">
                 </article>
             </section>
     
