--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A Passionate Product Designer and Experienced Front-end Developer">
-    <meta name="keywords" content="Product Design, UX Design, Interaction Design, Front-end Development, Code">
+    <meta name="description" content="Libby Audiobooks">
     <meta name="author" content="Tolu Adegbite">
     
     <!--For Sites to pull data-->
@@ -14,13 +13,14 @@
     <meta property="og:image" content=""/>
     <meta property="og:description" content="Your Favourite Audiobook Client"/>
     
-    <title>Tolu Adegbite's Portfolio</title>
+    <title>Libby Audiobooks</title>
 
     <!--<link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png"/>
     <link rel="icon" type="image/png" sizes="192x192" href="favicon-192.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png"/>-->
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
