--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section>
 
             <article class="article-one">
-                    <h1 class="secondary-title">Unlock Free Audiobooks with your Library Card</h1>
+                    <h1>Unlock free audiobooks with your library card</h1>
 
             <div class="left-one">
                 <p>Did you know your local library has thousands of ebooks and audiobooks?</p>
