--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="left-one">
                 <p>Did you know your local library has thousands of ebooks and audiobooks?</p>
                 &nbsp;       
-                <p>You can borrow them, instantly, for free, using your phone or your tablet.</p>
+                <p>You can borrow them instantly, for free, using your phone or your tablet.</p>
                 &nbsp;
                 <p>Download the app for desktop or mobile.</p>
                 &nbsp;
